add project in uri path, modify related api to support the change (#25)
* change rest api from '/v1/xxx' to '/v1/kie/xxx', add project field in label schema

* add project in uri path, modify related api to support change
1. add project field in KVDoc and LabelDoc, add the param for project in backend api
2. all related mongo CRUD should add filter for project

* remove project method, use existing methods

* add a option in client side for project

* remove mutiple read project
