# server/service/label/service.go
@@ -20,14 +20,15 @@ package label
 import (
 	"context"
 	"fmt"
+
 	"github.com/apache/servicecomb-kie/server/db"
 	"github.com/go-mesh/openlogging"
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-//Exist check label exists or not and return label ID
-func Exist(ctx context.Context, domain string, labels map[string]string) (primitive.ObjectID, error) {
-	l, err := FindLabels(ctx, domain, labels)
+//Exist check whether the project has certain label or not and return label ID
+func Exist(ctx context.Context, domain string, project string, labels map[string]string) (primitive.ObjectID, error) {
+	l, err := FindLabels(ctx, domain, project, labels)
 	if err != nil {
 		if err.Error() == context.DeadlineExceeded.Error() {
 			openlogging.Error("find label failed, dead line exceeded", openlogging.WithTags(openlogging.Tags{
